Add new author creation function and fix return value
